--- a/02.TheMean/Slides/slidesintrotoR.Rnw
+++ b/02.TheMean/Slides/slidesintrotoR.Rnw
@@ -53,32 +53,37 @@ setPar()
 \begin{frame}{What R can do}
 
   \pause \begin{exampleblock}{Everything.$^{1,2}$}
-    
+
   {\tiny $1$ Except think about your science}\\
   {\tiny $2$ Occasionally in a non efficient way}
   \end{exampleblock}
-  
+
   \pause \begin{block}{What about RStudio?}
   \begin{itemize}
     \item Makes your life easier
-    \item Many handy tricks. So far we have seen:
+    \item Many handy tricks
       \begin{itemize}
-      \item Autocomplete suggestion (all alone or press tab)
-      \item Ctrl-Enter to send command to R
-      \item str() and View() objects in Environment
+        \item Autocomplete suggestion
+        \item Ctrl-Enter to send command to R
+        \item str() and View() objects in Environment
+        \item Files, packages, help selectors
+        \item Version control\dots
       \end{itemize}
     \end{itemize}
   \end{block}
+  
 \end{frame}
 %%%%%%%%%%%
+
+
 
 \AtBeginSection[]
 {
   \begin{frame}<beamer>
     \frametitle{}
-    \tableofcontents[currentsection,hideothersubsections,subsectionstyle=hide]% down vote\tableofcontents[currentsection,currentsubsection,hideothersubsections,sectionstyle=show/hide,subsectionstyle=show/shaded/hide] 
+    \tableofcontents[currentsection,hideothersubsections,subsectionstyle=hide]% down vote\tableofcontents[currentsection,currentsubsection,hideothersubsections,sectionstyle=show/hide,subsectionstyle=show/shaded/hide]
   \end{frame}
-} 
+}
 \section{The mean}
 
 \begin{frame}[fragile]{Calculating a mean: Arithmetic and assignment}
@@ -92,7 +97,7 @@ setPar()
   b <- 3
   c <- 5
   d <- 1
-  
+
   (a + b + c + d) / 4
 @
 \pause
@@ -103,71 +108,90 @@ setPar()
 \end{frame}
 %%%%%%%%%%%
 
+\begin{frame}[fragile]{Calculating a mean: using vectors}
 
-\begin{frame}[fragile]{Calculating a mean: using vectors} % tiring to type again and again
-  <<>>=
+<<>>=
   c(2,3,5,1) # c is for concatenate
-  @
-  \pause
-  <<>>=
-  mydata <- c(2,3,5,1) # save the vector
-  @
-  \pause
-  
-  <<>>=
-   mydata <- (2,3,5,1) # c is missing => error!
-  @
-  
-  \pause
-  
-  Why bother with vectors?
+@
+\pause
+<<>>=
+ mydata <- c(2,3,5,1) # save the vector
+@
+\pause
+<<>>=
+  mydata <- (2,3,5,1) # c is missing => error!
+@
+\end{frame}
+
+
+
+%%%%%%%%%%%
+
+  \begin{frame}[fragile]{Why bother with vectors?}
+  Substitution:
   <<>>=
     mydata[2] <- 4
     mydata
   @
+
+  Vectorized operations:
+  <<>>=
+    mydata*5 + 2
+    @
 \end{frame}
 %%%%%%%%%%%
 
+\begin{frame}[fragile]{Exercise}
+
+<<>>=
+  -5:20
+@
+
+\end{frame}
+%%%%%%%%%%%
+
+
 \begin{frame}[fragile]{Calculating a mean: using functions}%shortcut
-  
+
   How to use a function?
   <<>>=
-    ?mean  
+    ?mean
   @
-  
+
+  Or use \textbf{tab}
 \pause
 
   <<>>=
   mean(c(2,4,5,1))
   mean(mydata)
-  
+
   mean(x = mydata)
   @
-  
+
 
 \end{frame}
-%%%%%%%%%%%
+%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Data-frames}
 
 \begin{frame}[fragile]{Loading data}
-  
+
   <<>>=
-    data("trees")
+    trees <- read.csv("trees.csv")
   @
   \pause
-  
+
   <<>>=
   str(trees)
   @
-  
+
   Try also \texttt{summary}, \texttt{class}, \texttt{head}, \texttt{tail}
 \end{frame}
 %%%%%%%%%%%
 
 \begin{frame}[fragile]{Access}
-  
+
   \begin{block}{Bracket-syntax}
     \begin{itemize}
       \item Row: dataframe[row, ]
@@ -175,7 +199,7 @@ setPar()
       \item Element: dataframe[row, column]
     \end{itemize}
   \end{block}
-  
+
   \pause
   <<eval=FALSE>>=
   trees[,1]
@@ -183,37 +207,31 @@ setPar()
   trees[c(2,1,2), 3]
   trees[, "Height"]
   @
-  
+
   \begin{block}{Dollar-syntax}
     \begin{itemize}
       \item Column \verb+ dataframe$column_name +
       \item Element \verb+ dataframe$column_name[row] +
     \end{itemize}
   \end{block}
-  
+
   <<eval=FALSE>>=
     trees$Height
   @
 \end{frame}
 %%%%%%%%%%%
 
-\begin{frame}[fragile]{Finally time to think a tiny bit!}
-  \begin{center}
-    \includegraphics[width=0.3\textwidth]{Figures/brain}
-  \end{center}
-\centering
+\begin{frame}{Time to think a tiny bit!}
+
   \textbf{Calculate the mean for all three variables in trees,\\ excluding the last (31st) record.}
-  
+
 \end{frame}
 %%%%%%%%%%%
 
 \begin{frame}[fragile]{Solution for one column}
-  \begin{center}
-    \includegraphics[width=0.3\textwidth]{Figures/brain}
-  \end{center}
-\centering
+
   \textbf{Calculate the mean for all three variables in trees,\\ excluding the last (31st) record.}
-  
+
   <<eval=FALSE>>=
     mean(trees$Girth[1:30])
     mean(trees[1:30, "Girth"])
@@ -235,6 +253,8 @@ setPar()
 \end{frame}
 %%%%%%%%%%%
 
+\section{For-loop}
+
 \begin{frame}[fragile]{How to get the row means? For-loops}
 
   <<eval = FALSE>>=
@@ -243,7 +263,7 @@ setPar()
       something as a function of i
     }
   @
-  
+
   \pause
     <<eval = FALSE>>=
     ResultMean <- vector() # we will store the results there
@@ -252,20 +272,20 @@ setPar()
       ResultMean[i] <- mean(as.numeric(trees[i,]))
     }
   @
-  
+
 \end{frame}
 %%%%%%%%%%%
 
 \begin{frame}[fragile]{For-loops: your turn!}
 
-Load rock data.
+Load rock data
   <<>>=
-    data("rock")
+  rock <- read.csv("rock.csv")
   @
-  
+
   \centering
 \textbf{\large Use a for loop to obtain column averages}
-  
+
 \end{frame}
 %%%%%%%%%%%
 
@@ -274,12 +294,12 @@ Load rock data.
 
 Load rock data.
   <<>>=
-    data("rock")
+  rock <- read.csv("rock.csv")
   @
-  
+
   \centering
 \textbf{\large Use a for loop to obtain column averages}
-  
+
   <<eval=FALSE>>=
     storage <- vector(length = ncol(rock))
     for (i in 1:ncol(rock))
@@ -294,9 +314,9 @@ Load rock data.
   <<eval=FALSE>>=
   apply(X = dataframe, MARGIN = 1 (row) or 2 (col), FUN = function)
   @
-  
+
   \pause
-  
+
   <<eval=FALSE>>=
   apply(X = rock, MARGIN = 1, FUN = mean)#by row (not meaningful)
   apply(X = rock, MARGIN = 2, FUN = mean)#by column
@@ -306,12 +326,12 @@ Load rock data.
 \begin{frame}[fragile]{Even better (worse)...}
 
   <<eval=FALSE>>=
-    colMeans(rock)  
+    colMeans(rock)
     rowMeans(rock)
   @
-  
+
   \pause
-  
+
   \begin{alertblock}{Trade-off concision  / flexibility}
     \begin{itemize}
       \item colMeans shortest, but does only means
@@ -320,10 +340,40 @@ Load rock data.
       \item (NB: your computer does a for-loop whether you see it or not)
     \end{itemize}
   \end{alertblock}
-  
+
 \end{frame}
 %%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\section{While-loop}
+
+\begin{frame}[fragile]{While-loop: idea}
+Less common than for-loops\\
+Stop the loop after a condition is met\\
+
+<<eval=FALSE>>=
+    
+  @
+  
+\end{frame}
+%%%%%%%%%%%
+
+\begin{frame}[fragile]{What is the smallest reproductive rate necessary to obtain a growing population?}
+<<message=FALSE>>=
+library(popbio)
+mat <- matrix(c(0,0.8,1,0), nrow = 2)
+lambda(mat)
+cond <- 1
+while(lambda(mat) < 1 )
+{
+  mat[1,2] <- mat[1,2]+0.001
+}
+mat[1,2] 
+@
+
+\end{frame}
+%%%%%%%%%%%
+
 
 \section{Visualisation}
 
@@ -357,7 +407,7 @@ plot(x = rock$peri, y = rock$area)
 \begin{frame}[fragile]{plot function}
 
 <<plorock4>>=
-plot(x = rock$peri, y = rock$area, main = "Eureka!", 
+plot(x = rock$peri, y = rock$area, main = "Eureka!",
      xlab = "Perimeter", ylab = "area", col="blue", pch=2)
 @
 \end{frame}
@@ -365,7 +415,7 @@ plot(x = rock$peri, y = rock$area, main = "Eureka!",
 
 \begin{frame}[fragile]{plot function: back to the mean}
   <<>>=
-  data("iris")  
+  data("iris")
   @
 \end{frame}
 %%%%%%%%%%%
@@ -392,12 +442,12 @@ plot(iris$Sepal.Length, col=iris$Species)
   <<>>=
   ?t.test
   @
-  
+
   \pause
   <<>>=
   t.test(1:10, y = c(7:20))
   @
-  
+
 \end{frame}
 %%%%%%%%%%%
 
@@ -412,7 +462,7 @@ plot(iris$Sepal.Length, col=iris$Species)
 \begin{frame}[fragile]{Are irises different?}
 
   \textbf{Use t-tests to compare species in the iris dataset}
-  
+
   \begin{center}
     \includegraphics[height=0.6\textwidth]{Figures/iris}
   \end{center}
@@ -422,20 +472,20 @@ plot(iris$Sepal.Length, col=iris$Species)
 \begin{frame}[fragile]{Are irises different? Solution}
 
   \textbf{Use t-tests to compare species in the iris dataset}
-  
+
   Sorry, I was mean and forgot to tell about subsetting, which you needed here.\\
   Subset to the species \textit{setosa}:
   <<eval=FALSE>>=
-    iris[iris$Species == "setosa", ]  
+    iris[iris$Species == "setosa", ]
   @
-  
+
   One t-test for sepal length between \textit{setosa} and \textit{versicolor}:
   <<eval=FALSE>>=
     t.test(x = iris$Sepal.Length[iris$Species == "setosa"],
           y = iris$Sepal.Length[iris$Species == "versicolor"])
   @
-  
-  
+
+
 \end{frame}
 %%%%%%%%%%%
 
